# graphfs

./: Cargo.toml  flake.nix  rustfmt.toml
lib/graph/: Cargo.toml
lib/graph/src/: lib.rs
lib/graph/src/id/: mod.rs
lib/indexer/: Cargo.toml
lib/indexer/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: main.rs
src/: main.rs
