[package]
name = "filesagain"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
ctor = "0.2.8"
anyhow = "1.0.82"
thiserror = "1.0.59"
clap = "4.5.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
jwalk = "0.8.1"
rayon = "1.10.0"
glob = "0.3.1"
regex = "1.10.4"
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tree = "0.3.0"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"
