[package]
name = "indexer"
version = "0.1.0"
edition = "2021"
authors = ["Jules <jules@dodrugsbe.gay>"]
description = "Indexes the filesystem for graph representation."
license = "MIT"

[lib]
name = "indexer"
path = "src/lib.rs"

[dependencies]
graph = { path = "../graph" }
jwalk = "0.8.1"
rayon = "1.10.0"
glob = "0.3.1"
regex = "1.10.4"
lazy_static = "1.4.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
tracing-tree = "0.3.0"
strum = { version = "0.26.2", features = ["derive"] }
strum_macros = "0.26.2"

hypergraph = "2.1.2"
petgraph = { version = "0.6.4", features = [
  "serde-1",
  "serde_derive",
  "graphmap",
  "stable_graph",
] }

smallvec = "1.13.2"
smallstr = "0.3.0"
